--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 ### 设置###
-log4j.rootLogger =  info,stdout
+log4j.rootLogger =  info,stdout,D,E
 
 ### 输出信息到控制抬 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
@@ -7,13 +7,14 @@ log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} [ %t:%r ] - [ %p ] %l %m%n
 
-### 输出DEBUG 级别以上的日志到=/home/duqi/logs/debug.log ###
-log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+### 输出INFO 级别以上的日志到=/TestSpace/Log/ ###
+log4j.appender.D = org.apache.log4j.FileAppender
 log4j.appender.D.File = D:/TestSpace/Log/caiyun.log
 log4j.appender.D.Append = true
-log4j.appender.D.Threshold = DEBUG
+log4j.appender.D.Threshold = INFO
+log4j.appender.D.Encoding = UTF-8
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} %n
+log4j.appender.D.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} [ %t:%r ] - [ %p ] %l %m%n
 
 ### 输出ERROR 级别以上的日志到=/home/admin/logs/error.log ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
