--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 ### 设置###
 log4j.rootLogger =  info,stdout,D,E
+log4j.addivity.org.apache=true
 
 ### 输出信息到控制抬 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
@@ -10,7 +11,7 @@ log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 ### 输出INFO 级别以上的日志到=/TestSpace/Log/ ###
 log4j.appender.D = org.apache.log4j.FileAppender
 log4j.appender.D.File = D:/TestSpace/Log/caiyun.log
-log4j.appender.D.Append = true
+log4j.appender.D.Append = false
 log4j.appender.D.Threshold = INFO
 log4j.appender.D.Encoding = UTF-8
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
