--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootLogger =  info,stdout,D,E
 log4j.addivity.org.apache=true
 
-### 输出信息到控制抬 ###
+### 输出信息到控制台 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
@@ -17,7 +17,7 @@ log4j.appender.D.Encoding = UTF-8
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} [ %t:%r ] - [ %p ] %l %m%n
 
-### 输出ERROR 级别以上的日志到=/home/admin/logs/error.log ###
+### 输出ERROR 级别以上的日志到=D:/TestSpace/Error_log/error.log ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.E.File =D:/TestSpace/Error_log/error.log
 log4j.appender.E.Append = true
