--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,15 +1,15 @@
-### 设置###
+### \u8BBE\u7F6E###
 log4j.rootLogger =  info,stdout,D,E
 log4j.addivity.org.apache=true
 
-### 输出信息到控制台 ###
+### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u53F0 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.Threshold = INFO
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss }- %l %m%n
 
-### 输出INFO 级别以上的日志到=/TestSpace/Log/ ###
+### \u8F93\u51FAINFO \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=/TestSpace/Log/ ###
 log4j.appender.D = org.apache.log4j.FileAppender
 log4j.appender.D.File = D:/TestSpace/Log/caiyun.log
 log4j.appender.D.Append = false
@@ -18,7 +18,7 @@ log4j.appender.D.Encoding = UTF-8
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} [ %t:%r ] - [ %p ] %l %m%n
 
-### 输出ERROR 级别以上的日志到=D:/TestSpace/Error_log/error.log ###
+### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=D:/TestSpace/Error_log/error.log ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.E.File =D:/TestSpace/Error_log/error.log
 log4j.appender.E.Append = true
